--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -212,7 +212,7 @@ section {
   padding: 0 3.75rem;
 }
 
-#text {
+#about-text {
   padding: 3.75rem 0;
   color: colors.$dark;
   width: min(26.625rem, 100%);
